Skulling: - Rewrote the code - Fixed a bug where the thread that ticks down timers throws an exception
Added DeathBans
- Players get temporarily banned on death

TODO:
- Rework existing commands
- Add commands to manage DeathBans
- Add TabCompletion for all commands

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -26,5 +26,6 @@ skulling:
   initial: 1800
   perHit: 15
   perKill: 600
-  removalTime: 1000  # every x ms the value gets decreased. Dont go too low unless NASA
-  schedulerDecrement: 1
+  removalTime: 1  # every x seconds the value gets decreased. Dont go too low unless NASA
+deathban:
+  time: 3600
